--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="hero">
 
         <div class="nav">
-          <button class="menu hidden" area-label="open menu"><img src="./images/icon-hamburger.svg" alt="menu icon"></button>
+          <button class="menu hidden"><img src="./images/icon-hamburger.svg" alt="menu icon"></button>
           <div class="logo"><img src="./images/logo.svg" alt="logo image"></div>          
           <a class="link" href="#">home</a>
           <a class="link" href="#">shop</a>
@@ -83,8 +83,8 @@
 
         <!-- slide buttons -->
         <div class="slide-btns">
-          <button class="prev" area-label="to previous image"><img src="./images/icon-angle-left.svg" alt="previous button icon"></button>
-          <button class="next" area-label="to next image"><img src="./images/icon-angle-right.svg" alt="next button icon"></button>
+          <button class="prev"></button><img src="./images/icon-angle-left.svg" alt="previous button icon"></button>
+          <button class="next"></button><img src="./images/icon-angle-right.svg" alt="next button icon"></button>
         </div>
 
       </div>
@@ -107,7 +107,7 @@
       <!-- mobile menu -->
       <div class="overlay"></div>
       <div class="mobile-menu">
-        <button class="close" area-label="close menu"><img src="./images/icon-close.svg" alt="close button icon"></button>
+        <button class="close"><img src="./images/icon-close.svg" alt="close button icon"></button>
         <div class="links">
           <a class="link" href="#">home</a>
           <a class="link" href="#">shop</a>
