--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
         <!-- slide buttons -->
         <div class="slide-btns">
-          <button class="prev"></button><img src="./images/icon-angle-left.svg" alt="previous button icon"></button>
-          <button class="next"></button><img src="./images/icon-angle-right.svg" alt="next button icon"></button>
+          <button class="prev"><img src="./images/icon-angle-left.svg" alt="previous button icon"></button>
+          <button class="next"><img src="./images/icon-angle-right.svg" alt="next button icon"></button>
         </div>
 
       </div>
